--- a/css/root.css
+++ b/css/root.css
@@ -4,23 +4,20 @@
   src: url("assets/Autography.otf"), format("otf");
 }
 :root {
-  --button-color: #3caccb;
-  --baby-blue: #95bcd8;
   --yellow: #ffd800;
+  --beige: #e1a089;
 
   --h1-d: 4.6vw;
+  --h2-d: 3.981vw;
   --h3-d: 3.318vw;
-  --spacing: 0.15em;
-  --normal-text: 1.25vw;
-  --buton-text: 1.719vw;
-  --category-heading: 3.229vw;
 
-  --margin: 0vw 6.944vw 0vw 6.944vw;
+  --line-height: 1.8vw;
+
+  --margin: 0vw 0vw 6.944vw;
+  --theNumber: -6.944vw;
 
   --shadow: rgba(0, 0, 0, 0.1) 2px 4px 11px 0px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
-
-  --button-height: 4.844vw;
 }
 
 body {
@@ -30,4 +27,22 @@ body {
 
 img {
   max-width: 100%;
+}
+
+p {
+  line-height: var(--line-height);
+}
+
+h2 {
+  font-size: var(--h2-d);
+}
+
+button {
+  padding: 0.8vw 2vw;
+  font-size: 14px;
+  border: none;
+  background-color: var(--beige);
+  color: white;
+  font-weight: 400;
+  border-radius: 7px;
 }
