--- a/css/checkout.css
+++ b/css/checkout.css
@@ -156,6 +156,37 @@ input {
   transform: rotate(-180deg);
 }
 
+/* -------------- RECIEPT -------------- */
+.sec-reciept > h2 {
+  transform: translateX(-0.5rem);
+  font-family: "Autography";
+  font-size: 3rem;
+  margin-bottom: -0.5rem;
+}
+
+.sec-reciept {
+  background-color: #96d3c1;
+  padding-right: 2rem;
+  margin-right: -2rem;
+}
+
+.signature {
+  font-family: "Autography";
+  font-size: 3rem;
+  margin-top: -0.5rem;
+  text-align: center;
+}
+
+.someiconflex {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.somelogo {
+  margin: 1rem 0;
+}
+
 @media only screen and (min-width: 900px) {
   main {
     display: grid;
