--- a/css/checkout.css
+++ b/css/checkout.css
@@ -187,6 +187,11 @@ input {
   margin: 1rem 0;
 }
 
+.reciept-text-wrap {
+  margin: 0 1rem;
+  padding-bottom: 2rem;
+}
+
 @media only screen and (min-width: 900px) {
   main {
     display: grid;
