added responsive styling

--- a/css/cart.css
+++ b/css/cart.css
@@ -1,23 +1,80 @@
+.page-title {
+    text-align: center;
+    grid-column: 2/4;
+}
+
 .cart-outer-box {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-}
-
-.background-div {
-    background-image: url(/img/small-waves-dark-beige-bg.png);
-    grid-column: 2/4;
+    max-width: 500px;
+    height: 100vh;
+    position: fixed;
 }
 
 .cart-card {
     grid-column: 1/5;
+    display: grid;
+    grid-template: repeat(3, 1fr) / 2fr 2fr 1fr;
+    gap: 0.5rem;
+    max-height: 10rem;
+    overflow: hidden;
+    padding: 1rem;
+}
+
+.cart-img-item-container {
+    grid-area: 1 / 1 / 4 / 2;
+    overflow: hidden;
+}
+
+.cart-item-name,
+.cart-item-description,
+.cart-item-price {
+    grid-column: 2/3;
+    margin: 0.2rem 0;
+}
+
+.remove-item {
+    grid-area: 1 / 3 / 2 / 4;
+    justify-self: end;
+}
+
+.cart-img-item-container>img {
+    height: 100%;
+    width: auto;
+    max-width: none;
+}
+
+.quantity-outer-box {
+    display: flex;
+    align-items: center;
+}
+
+.cart-item-quantity {
+    height: 30px;
+    width: 50px;
 }
 
 .subtotal-flex {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     grid-column: 1/5;
 }
 
-button {
+button.cart-to-checkout {
     grid-column: 2/4;
+    align-self: center;
+}
+
+/*Source: https://www.w3schools.com/howto/howto_css_hide_arrow_number.asp*/
+/* Chrome, Safari, Edge, Opera */
+input.cart-item-quantity::-webkit-outer-spin-button,
+input.cart-item-quantity::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number].cart-item-quantity {
+    -moz-appearance: textfield;
 }
