--- a/css/root.css
+++ b/css/root.css
@@ -10,10 +10,11 @@
   --h1-d: 4.6vw;
   --h2-d: 3.981vw;
   --h3-d: 3.318vw;
-
+  --body-copy: 1.111vw;
   --line-height: 1.8vw;
+  --button-copy: 0.972vw;
 
-  --margin: 0vw 0vw 6.944vw;
+  --margin: 0vw 6.944vw 0vw;
   --theNumber: -6.944vw;
 
   --shadow: rgba(0, 0, 0, 0.1) 2px 4px 11px 0px,
@@ -31,6 +32,7 @@ img {
 
 p {
   line-height: var(--line-height);
+  font-size: var(--body-copy);
 }
 
 h2 {
@@ -39,7 +41,7 @@ h2 {
 
 button {
   padding: 0.8vw 2vw;
-  font-size: 14px;
+  font-size: var(--button-copy);
   border: none;
   background-color: var(--beige);
   color: white;
