--- a/css/root.css
+++ b/css/root.css
@@ -6,7 +6,7 @@
 :root {
   --yellow: #ffd800;
   --beige: #e1a089;
-
+  /*desktop*/
   --h1-d: 4.6vw;
   --h2-d: 3.981vw;
   --h3-d: 3.318vw;
@@ -16,6 +16,14 @@
 
   --margin: 0vw 6.944vw 0vw;
   --theNumber: -6.944vw;
+
+  /*mobile*/
+  --h1-m: 10.427vw;
+  --h2-m: 8.853vw;
+  --h3-m: 7.373vw;
+  --h4-m: 6.24vw;
+  --body-copy-m: 4.267vw;
+  --button-copy-m: 3.733vw;
 
   --shadow: rgba(0, 0, 0, 0.1) 2px 4px 11px 0px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
