--- a/css/checkout.css
+++ b/css/checkout.css
@@ -227,8 +227,8 @@ input {
 
 .sec-reciept {
   background-color: #96d3c1;
-  padding-right: 2rem;
-  margin-right: -2rem;
+  padding-right: -6.944vw;
+  margin-right: -6.944vw;
 }
 
 .signature {
