--- a/css/root.css
+++ b/css/root.css
@@ -20,7 +20,7 @@
   --h3-d: 3.318vw;
   --body-copy: 1.111vw;
   --line-height: 1.8vw;
-  --button-copy: 0.972vw;
+  --button-copy: 0.972rem;
 
   --margin: 0vw 6.944vw 0vw;
   --theNumber: -6.944vw;
@@ -50,12 +50,18 @@ h2 {
   font-size: var(--h2-d);
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 button {
-  padding: 0.8vw 2vw;
+  padding: 0.8rem 2rem;
   font-size: var(--button-copy);
   border: none;
   background-color: var(--beige);
   color: white;
   font-weight: 400;
   border-radius: 7px;
+  cursor: pointer;
 }
