--- a/css/productpage.css
+++ b/css/productpage.css
@@ -1,19 +1,3 @@
-.flex-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.breadcrumbs.flex-container {
-    justify-content: flex-start;
-}
-
-.product-image {
-    margin-top: 2rem;
-    border-radius: 7px;
-}
-
-/*mobile media queries*/
 @media (max-width: 770px) {
     /*Adding a photo under the nav bar*/
     nav {
@@ -22,3 +6,39 @@
         left: 0;
     }
     }
+
+.flex-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.selection-flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.selection-flex>p {
+    color: var(--grey);
+    font-size: 0.8rem;
+}
+
+.breadcrumbs.flex-container {
+    justify-content: flex-start;
+}
+
+.product-image {
+    margin-top: 1.5rem;
+    border-radius: 7px;
+}
+
+.align-button {
+    display: flex;
+    justify-content: center;
+}
+
+.add-to-cart {
+    background-color: var(--yellow);
+}
