--- a/css/productpage.css
+++ b/css/productpage.css
@@ -1,4 +1,4 @@
-@media (max-width: 770px) {
+@media (max-width: 700px) {
     /*Adding a photo under the nav bar*/
     nav {
         position: absolute;
@@ -32,6 +32,11 @@
 .product-image {
     margin-top: 1.5rem;
     border-radius: 7px;
+}
+
+.total-add-container {
+    background-color: var(--beige);
+    padding: 1rem 0;
 }
 
 .align-button {
