--- a/css/root.css
+++ b/css/root.css
@@ -16,6 +16,9 @@
   --beige: #e1a089;
   --light-grey: #cccccc;
   --grey: #808080;
+  --minty: #96D3C1;
+  --dark-green: #44A86A;
+  --light-beige: #FFDCD0;
   /*desktop*/
   --h1-d: 4.6vw;
   --h2-d: 3.981vw;
@@ -58,9 +61,9 @@ a {
 }
 
 button {
-  width: 8.2rem;
-  height: 2.8rem;
-  /* padding: 0.8rem 2rem; */
+  /* width: 8.5rem;
+  height: 2.8rem; */
+  padding: 0.8rem 2rem;
   font-size: var(--button-copy);
   border: none;
   background-color: var(--beige);
