--- a/css/home.css
+++ b/css/home.css
@@ -5,6 +5,10 @@ nav {
   margin-top: 2vw;
 }
 
+p {
+  font-size: var(--body-copy);
+}
+
 nav > a > img {
   width: 100%;
 }
@@ -18,6 +22,14 @@ body {
   position: relative;
   display: flex;
   margin-top: 5vw;
+}
+
+#heroMob {
+  display: none;
+}
+
+#bgMob {
+  display: none;
 }
 
 #jewellery {
@@ -38,7 +50,7 @@ h1 {
   z-index: 1;
 }
 
-#heroImg {
+.heroImg {
   position: absolute;
   right: 0;
   z-index: -1;
@@ -310,9 +322,29 @@ a {
     position: unset;
     display: flex;
     flex-direction: column;
+    margin-right: var(--theNumber);
+  }
+  #background {
+    display: none;
+  }
+  #bgMob {
+    display: unset;
+    position: absolute;
+    top: 0;
+    width: 75%;
+    right: 0vw;
+    z-index: -3;
   }
 
-  #heroImg {
+  #heroDesk {
+    display: none;
+  }
+
+  #heroMob {
+    display: unset;
+  }
+
+  .heroImg {
     position: unset;
     width: 86vw;
   }
@@ -325,6 +357,7 @@ a {
   #yellowText {
     position: unset;
   }
+
   /* Video */
   #video {
     display: flex;
@@ -473,4 +506,8 @@ a {
     padding: 2.5vw 5vw;
     border-radius: 5px;
   }
+}
+
+.hidden {
+  display: none;
 }
