--- a/css/cart.css
+++ b/css/cart.css
@@ -24,6 +24,7 @@ body {
         rgba(0, 0, 0, 0.06) -2px 0px 4px -1px;
     transform: translateX(100%);
     transition: transform ease-out 250ms;
+    z-index: 100;
 }
 
 .cart-outer-card {
