--- a/css/productpage.css
+++ b/css/productpage.css
@@ -7,6 +7,7 @@
     }
     }
 
+/* flex styling*/
 .flex-container {
     display: flex;
     align-items: center;
@@ -20,50 +21,8 @@
     text-align: center;
 }
 
-#wax, #gemstones {
-    padding: 0.8rem 0.3rem;
-    font-size: var(--button-copy);
-    border: none;
-    background-color: white;
-    color: var(--beige);
-    font-weight: 400;
-    border-radius: 7px;
-    border: 2px solid var(--beige);
-    cursor: pointer;
-}
-
-#wax:focus, #gemstones:focus, #wax:hover, #gemstones:hover, #wax:active, #gemstones:active {
-    transition: 350ms;
-    outline: none;
-    background: var(--beige);
-    border: 2px solid var(--beige);
-    color: white;
-}
-
-#wax>option, #gemstones>option {
-    background: white;
-    color: var(--beige);
-}
-
 .selection-flex {
     position: relative;
-}
-
-.arrow {
-    position: absolute;
-    right: 5%;
-    top: 50%;
-    margin-top: -1.6rem;
-    display: flex;
-    align-items:baseline;
-
-    width: 1.2rem;
-    height: auto;
-}
-
-.selection-flex>p {
-    color: var(--grey);
-    font-size: 0.8rem;
 }
 
 .breadcrumbs.flex-container {
@@ -73,6 +32,76 @@
 .product-image {
     margin-top: 1.5rem;
     border-radius: 7px;
+}
+
+/*form code*/
+
+.title-form {
+    display: flex;
+    align-items: center;
+}
+
+ /* source https://www.w3schools.com/howto/howto_css_custom_checkbox.asp */
+ .wax-selection {
+    display: block;
+    position: relative;
+    padding-left: 1.3rem;
+    cursor: pointer;
+    font-size: 14px;
+    width: 70%;
+    
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .wax-selection input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 1.1rem;
+    width: 1.1rem;
+    background-color: rgb(255, 255, 255);
+    border: 2px solid var(--beige);
+  }
+
+  .radio-btn {
+      border-radius: 50%;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .wax-selection:hover input ~ .checkmark {
+    transition: 150ms;
+    border: 2.5px solid var(--beige);
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .wax-selection input:checked ~ .checkmark {
+    transition: 50ms;
+    border: 5px solid var(--beige);
+  }
+
+  .label-group {
+      display: flex;
+      font-size: 14px;
+      align-items: center;
+      justify-content: space-between;
+  }
+
+.selection-flex>p {
+    color: var(--grey);
+    font-size: 0.8rem;
 }
 
 .total-add-container {
