--- a/css/productlist.css
+++ b/css/productlist.css
@@ -30,24 +30,46 @@ main {
 .product {
   display: flex;
   flex-direction: column;
+  margin-bottom: 2rem;
 }
 
-.product-title {
+.product-info {
+  display: flex;
+  flex-direction: column;
   align-self: flex-end;
+}
+
+.price-and-arrow {
+  display: flex;
+  align-items: center;
+}
+
+.arrow {
+  max-width: 100%;
+  height: 2rem;
+}
+
+.product-title,
+.price {
+  margin: 0;
 }
 
 /* MEDIA QUERIES */
 
 @media screen and (min-width: 700px) {
-  main {
+  /* main {
     display: block;
-  }
+  } */
 
   .productlist {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     grid-template-rows: 1fr;
     grid-gap: 1rem;
+  }
+
+  .product {
+    margin-bottom: 0;
   }
   /* .productlist {
     flex-wrap: wrap;
