line height, autography font syntax correcture

--- a/css/root.css
+++ b/css/root.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "Autography";
-  src: url("assets/Autography.otf") format("otf");
+  src: url("assets/Autography.otf"), format("otf");
 }
 
 * {
