--- a/css/productlist.css
+++ b/css/productlist.css
@@ -45,7 +45,7 @@ main {
   flex-direction: column;
 }
 
-.product {
+.product a {
   display: flex;
   flex-direction: column;
   margin-bottom: 2rem;
@@ -70,6 +70,10 @@ main {
 .product-title,
 .price {
   margin: 0;
+}
+
+.hidden {
+  display: none;
 }
 
 /* MEDIA QUERIES */
