--- a/css/checkout.css
+++ b/css/checkout.css
@@ -7,6 +7,22 @@
   border-bottom: 2rem;
 } */
 
+.contactpad {
+  padding-top: 0.5rem;
+}
+
+.centertext {
+  text-align: center;
+  font-size: small;
+  margin-top: 2rem;
+}
+
+button {
+  max-width: 15rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .space {
   padding-bottom: 0.8rem;
 }
@@ -25,7 +41,7 @@
 }
 
 .smallinfo {
-  font-size: smaller;
+  font-size: xx-small;
   color: grey;
   margin-bottom: -1rem;
 }
@@ -45,7 +61,8 @@
 .cartproductimage {
   height: 6rem;
   width: 6rem;
-  border: red solid 1px;
+  /* border: red solid 1px; */
+  background-color: white;
   border-radius: 10px;
   display: block;
   justify-self: flex-start;
@@ -98,7 +115,7 @@
   margin: 0.1 0 0 0;
   font-size: small;
 }
-.totalprice {
+.pay {
   margin-top: -1rem;
 }
 /* ---------- Bread Crumbs ---------- */
@@ -152,6 +169,10 @@ input {
 }
 
 /* -------- Payment Form ----------- */
+.sec-payment {
+  margin-top: 3rem;
+}
+
 .paymentoptionwrap {
   display: flex;
   align-items: center;
@@ -180,6 +201,13 @@ input {
 
 .sec-infosummary > h3 {
   margin-bottom: 0.5rem;
+}
+
+.sum-email,
+.sum-address,
+.sum-shipping {
+  font-size: small;
+  margin-top: 1.2em;
 }
 
 .line {
@@ -316,6 +344,7 @@ footer a {
     transform: translate(-4rem, -2rem);
     font-family: "Autography";
     font-size: 2.5rem;
+    margin-bottom: -2rem;
   }
 
   .breadcrumbs {
