--- a/css/productpage.css
+++ b/css/productpage.css
@@ -1,9 +1,12 @@
 @media (max-width: 700px) {
     /*Adding a photo under the nav bar*/
-    nav {
+    .nav-box {
         position: absolute;
         top: 0;
-        left: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        padding: var(--margin);
     }
     }
 
