--- a/css/productpage.css
+++ b/css/productpage.css
@@ -10,6 +10,12 @@
     }
     }
 
+* {
+    margin: 0;
+    padding: 0;
+    line-height: normal;
+}
+
 /* flex styling*/
 .flex-container {
     display: flex;
@@ -35,6 +41,12 @@
 .product-image {
     margin-top: 1.5rem;
     border-radius: 7px;
+}
+
+.explanation-box {
+    cursor: pointer;
+    font-weight: 700;
+    color: var(--beige);
 }
 
 /*form code*/
@@ -120,3 +132,72 @@
 .add-to-cart {
     background-color: var(--yellow);
 }
+
+.additional-info {
+    grid-column: 1/2;
+    justify-self: start;
+    margin: 2rem 0;
+}
+
+
+/*desktop adjustments ↓*/
+@media (min-width: 700px) {
+    main {
+        display: grid;
+        grid-template-columns: 1.5fr 1fr;
+        gap: 2rem;
+        justify-items: center;
+        align-items: start;
+    }
+
+    .product-image {
+        grid-column: 1/2;
+        margin: 0;
+    }
+
+    .col-2 {
+        grid-column: 2/3;
+    }
+
+    main h1 {
+        margin: 0.2rem 0 1rem;
+    }
+
+    main h2 {
+        font-size: 1rem;
+        font-weight: 700;
+    }
+
+    .breadcrumbs>p, .breadcrumbs>a>p {
+        font-size: 0.8rem;
+        margin-top: 0;
+    }
+
+    .top-details>h2, .total-container>p {
+        font-weight: 600;
+        font-size: 1.3rem;
+    }
+
+    .kit-content {
+        line-height: normal;
+        margin: 0.2rem 0 1rem;
+    }
+
+    .wax-container-to-append, .casting-container-to-append {
+        margin-bottom: 1rem;
+    }
+
+    .total-add-container {
+        background-color: white;
+        padding: 1rem 0;
+    }
+
+    .total-container>h2 {
+        font-weight: 500;
+    }
+
+    .add-to-cart {
+        margin: 2rem 0;
+    }
+
+    }
