--- a/css/menu.css
+++ b/css/menu.css
@@ -12,6 +12,7 @@
   left: max(calc(-100vw - 2rem), calc(-350px - 2rem));
   box-shadow: 4px 0px 20px -1px rgba(0, 0, 0, 0.25);
   transition: 0.5s;
+  z-index: 100;
 }
 .hidden {
   display: none;
