--- a/css/productlist.css
+++ b/css/productlist.css
@@ -11,7 +11,7 @@ img {
 }
 
 h2 {
-  /* autography? */
+  font-family: "Autography";
   /* font-size: var(--h2-m); */
   /* text-align: center; */
 }
