--- a/css/about.css
+++ b/css/about.css
@@ -4,6 +4,9 @@
   margin-left: var(--theNumber);
   margin-right: var(--theNumber);
   z-index: -1;
+  background-image: url(thick-lines-bg.svg);
+  width: 100vw;
+  height: 20vw;
 }
 
 #title {
@@ -113,5 +116,9 @@ h4 {
     margin-top: -2vw;
     text-align: left;
     margin-left: 4vw;
+  }
+
+  #thickLines {
+    height: 50vw;
   }
 }
