--- a/css/careguide.css
+++ b/css/careguide.css
@@ -4,6 +4,9 @@
   margin-left: var(--theNumber);
   margin-right: var(--theNumber);
   z-index: -1;
+  background-image: url(thick-lines-bg.svg);
+  width: 100vw;
+  height: 20vw;
 }
 
 #title {
@@ -116,5 +119,9 @@ h4 {
   }
   #title {
     margin-top: 9vw;
+  }
+
+  #thickLines {
+    height: 50vw;
   }
 }
