--- a/css/careguide.css
+++ b/css/careguide.css
@@ -6,7 +6,8 @@
   z-index: -1;
   background-image: url(thick-lines-bg.svg);
   width: 100vw;
-  height: 20vw;
+  height: 50vw;
+  background-size: cover;
 }
 
 #title {
@@ -122,6 +123,6 @@ h4 {
   }
 
   #thickLines {
-    height: 50vw;
+    height: 20vw;
   }
 }
