--- a/css/productpage.css
+++ b/css/productpage.css
@@ -57,10 +57,10 @@
 }
 
  /* source https://www.w3schools.com/howto/howto_css_custom_checkbox.asp */
- .wax-selection {
+ .wax-selection, .for-checboxes {
     display: block;
     position: relative;
-    padding-left: 1.3rem;
+    padding-left: 0.7rem;
     cursor: pointer;
     font-size: 14px;
     width: 70%;
@@ -72,16 +72,12 @@
   }
   
   /* Hide the browser's default checkbox */
-  .wax-selection input {
-    position: absolute;
-    opacity: 0;
+  input[type=checkbox], input[type=radio] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
     cursor: pointer;
-    height: 0;
-    width: 0;
-  }
-  
-  /* Create a custom checkbox */
-  .checkmark {
+
     position: absolute;
     top: 0;
     left: 0;
@@ -91,18 +87,18 @@
     border: 2px solid var(--beige);
   }
 
-  .radio-btn {
+  input[type=radio] {
       border-radius: 50%;
   }
-  
+
   /* On mouse-over, add a grey background color */
-  .wax-selection:hover input ~ .checkmark {
+  input[type=checkbox]:hover, input[type=radio]:hover {
     transition: 150ms;
     border: 2.5px solid var(--beige);
   }
   
   /* When the checkbox is checked, add a blue background */
-  .wax-selection input:checked ~ .checkmark {
+  input[type=checkbox]:checked, input[type=radio]:checked {
     transition: 50ms;
     border: 5px solid var(--beige);
   }
