--- a/css/contact.css
+++ b/css/contact.css
@@ -19,7 +19,7 @@
 }
 
 main {
-  margin-top: 5vw;
+  margin-top: 20vw;
   margin-bottom: 40vw;
 }
 
@@ -34,6 +34,14 @@ main {
 h3 {
   font-size: var(--h4-m);
   color: #96d3c1;
+}
+
+p {
+  margin-bottom: -10px;
+}
+
+.contact_info :last-child {
+  margin-bottom: 5vw;
 }
 
 button {
@@ -92,6 +100,7 @@ input {
   p {
     font-size: var(--body-copy);
     max-width: 54vw;
+    margin-bottom: -10px;
   }
 
   h3 {
@@ -102,6 +111,7 @@ input {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10vw;
+    margin-top: 5vw;
   }
 }
 
