--- a/css/productpage.css
+++ b/css/productpage.css
@@ -20,6 +20,10 @@ main {
     margin: 2.5rem 0 5rem;
 }
 
+main p {
+    font-size: 1rem;
+}
+
 /* flex styling*/
 .flex-container {
     display: flex;
