--- a/css/productpage.css
+++ b/css/productpage.css
@@ -143,6 +143,7 @@ main h2 {
       font-size: 14px;
       align-items: center;
       justify-content: space-between;
+      flex-wrap: wrap;
   }
 
 .selection-flex>p {
