--- a/css/home.css
+++ b/css/home.css
@@ -117,6 +117,7 @@ iframe {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 30vw;
 }
 
 .oneStep > img {
@@ -342,6 +343,10 @@ h4 {
     gap: 5vw;
   }
 
+  .oneStep {
+    width: unset;
+  }
+
   #steps >  h2 {
     margin-top: 2vw;
   }
@@ -359,7 +364,7 @@ h4 {
   #kitsText {
     position: relative;
     width: 60vw;
-    padding: 0vw 5vw 5vw;
+    padding: 0vw 5vw 7vw;
     margin-top: 2vw;
   }
 
@@ -380,6 +385,8 @@ h4 {
   #sustainText {
     position: absolute;
     right: 7vw;
+    padding: 0vw 5vw 7vw;
+
     width: 61vw;
     top: unset;
   }
@@ -394,12 +401,13 @@ h4 {
   #sustain {
     position: unset;
     margin-left: 7vw;
+    margin-top: 30vw;
   }
 
   /*pinterest*/
   #pinterest {
-    margin-top: 130vw;
-    height: 180vw;
+    margin-top: 140vw;
+    height: 190vw;
     flex-direction: column;
   }
   #pinterest > img {
