--- a/css/contact.css
+++ b/css/contact.css
@@ -83,6 +83,8 @@ input {
   width: 100%;
   padding: 5px;
   height: 10rem;
+  outline: none;
+  resize: none;
 }
 
 @media only screen and (min-width: 770px) {
