fixed burger text font

--- a/css/productlist.css
+++ b/css/productlist.css
@@ -10,7 +10,7 @@ img {
   height: auto;
 }
 
-h2 {
+main h2 {
   font-family: "Autography";
   /* font-size: var(--h2-m); */
   /* text-align: center; */
