--- a/css/manifesto.css
+++ b/css/manifesto.css
@@ -24,7 +24,7 @@
 
 h2 {
   font-size: var(--h4-m);
-  color: var(--yellow);
+  color: var(--beige);
 }
 
 p {
@@ -85,7 +85,9 @@ h4 {
   h4 {
     font-size: calc(0.6 * var(--h3-d));
   }
-
+  #stepsWrapper {
+    margin-left: 5vw;
+  }
   article {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -103,13 +105,15 @@ h4 {
     grid-template-areas:
       "img h"
       "img p";
+    justify-content: left;
   }
 
   .oneStep > h4 {
     grid-area: h;
     margin-top: 0vw;
     text-align: left;
-    margin-left: 4vw;
+    margin-left: 2vw;
+    margin-bottom: 0;
   }
 
   .oneStep > p {
