--- a/css/contact.css
+++ b/css/contact.css
@@ -4,6 +4,10 @@
   margin-left: var(--theNumber);
   margin-right: var(--theNumber);
   z-index: -1;
+  background-image: url(https://raw.githubusercontent.com/Ivanlsko/BYUstudio/8305ddb8940b606e5baa37d4e0d78ec4abbd188a/css/thick-lines-bg.svg);
+  width: 100vw;
+  height: 28vw;
+  background-size: cover;
 }
 
 #title {
