added bg to manifesto

--- a/css/manifesto.css
+++ b/css/manifesto.css
@@ -4,7 +4,7 @@
   margin-left: var(--theNumber);
   margin-right: var(--theNumber);
   z-index: -1;
-  background-image: url(https://raw.githubusercontent.com/Ivanlsko/BYUstudio/8305ddb8940b606e5baa37d4e0d78ec4abbd188a/css/thick-lines-bg.svg);
+  background-image: url(https://raw.githubusercontent.com/justtyx/BYUstudio.v2/5384d124dfc21ad3bf071280d58b1bb19f3b8852/assets/bursh-waves.svg);
   width: 100vw;
   height: 50vw;
   background-size: cover;
