--- a/css/faq.css
+++ b/css/faq.css
@@ -4,7 +4,7 @@
   justify-content: center;
 }
 
-.labels-box>button {
+.labels-box>a>button {
   border: 2px solid var(--beige);
   color: var(--beige);
   background-color: white;
@@ -12,6 +12,14 @@
   height: 3rem;
   padding: 0;
   margin: 0.2rem;
+}
+
+.labels-box>a>button:hover {
+  border: 2px solid white;
+  color: white;
+  background-color: var(--beige);
+  transition: 200ms;
+  transition-delay: 100ms;
 }
 
 .faq-section>h2 {
@@ -34,4 +42,9 @@
 .faq-title-box>img {
   width: 1rem;
   height: auto;
+}
+
+@media (min-width: 700px){
+  .labels-box {
+    margin: 1.5rem 0 5rem;}
 }
