--- a/css/nav.css
+++ b/css/nav.css
@@ -4,12 +4,13 @@ nav {
   align-items: center;
   margin-top: 2vw;
 }
-nav > a > img {
-  width: 100%;
+
+nav > a > img{
+  height: 10vh;
+  min-height: 50px;
 }
 
-@media only screen and (max-width: 700px) {
-  nav > a > img {
-    width: 80%;
-  }
+nav img {
+  height: 4vh;
+  min-height: 25px;
 }
