--- a/css/about.css
+++ b/css/about.css
@@ -5,6 +5,19 @@ img.landing-img-abt {
     margin: auto;
 }
 
-/* .deco-lines {
-    background-image: url();
-} */
+.deco-lines {
+    display: none;
+}
+
+.section-title {
+    color: var(--yellow);
+}
+
+@media (min-width: 700px) {
+.deco-lines {
+    height: 100px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: block;
+    background-image: url(https://raw.githubusercontent.com/justtyx/BYUstudio.v2/c780c79a42147516ac6bc5d48513f02a17364e32/assets/yellow-3-lines.svg);
+}}
