--- a/css/additional-pages.css
+++ b/css/additional-pages.css
@@ -28,7 +28,7 @@
     margin: 1.5rem 0 0.8rem;
   }
 
-  li {
+  .process>li {
     list-style: inside;
     list-style-type: number;
     font-size: var(--h3);
